--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-size: 18px;
-    font-family: "Ubuntu Mono", monospace;
+    font-family: "Albert Sans", sans-serif;
 }
 
 html, body {
